syntax = "proto3";

package transfer;

service FileService {
    rpc SyncFiles(FileRequest) returns (stream FileResponse) {}
}

message FileRequest {
    repeated FileInfo info = 1;
}

message FileInfo {
    string path = 1;
    string hash = 2;
}

message FileResponse {
    string path = 1;
    bytes data = 3;
}